intercom-attributes/tests/data/ui/span-comclass-unknown-interface.rs

extern crate intercom;
use intercom::*;

#[com_class(IDoesNotExist)]
struct S;
